syntax = "proto3";
package dymensionxyz.dymension.poolmanager.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/duration.proto";
import "cosmos/base/v1beta1/coin.proto";
import "dymensionxyz/dymension/poolmanager/v1beta1/module_route.proto";

option go_package = "github.com/osmosis-labs/osmosis/v15/x/poolmanager/types";

// GenesisState defines the poolmanager module's genesis state.
message GenesisState {
  // the next_pool_id
  uint64 next_pool_id = 1;
  // pool_routes is the container of the mappings from pool id to pool type.
  repeated ModuleRoute pool_routes = 2 [ (gogoproto.nullable) = false ];
}
